# faser

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: Cargo.toml  hyper.rs  noop_submit.rs
faser-executor/: Cargo.toml
faser-executor/src/: lib.rs
faser-executor/src/park/: mod.rs  spin.rs  thread.rs
faser-task/: Cargo.toml
faser-task/benches/: schedule.rs
faser-task/src/: header.rs  join.rs  lib.rs  taskqueue.rs
faser-task/src/tests/: combo.rs  mod.rs  panic.rs  wake.rs
faser-uring/: Cargo.toml
faser-uring/src/: bufring.rs  fd.rs  lib.rs
faser-uring/src/driver/: futures.rs  mod.rs  unpark.rs
faser-uring/src/io/: buf.rs  mod.rs
faser-uring/src/net/: mod.rs  socket.rs  udp.rs
faser-uring/src/operation/: header.rs  mod.rs  raw.rs
faser-uring/src/util/: mmap.rs  mod.rs  notify.rs
faser-uring/tests/: noop_submit.rs  udp.rs  util.rs
hack/: coverage.sh  miri.sh
norn-executor/: Cargo.toml
norn-executor/src/: context.rs  lib.rs  wakerfn.rs
norn-executor/src/park/: mod.rs  spin.rs
norn-task/: Cargo.toml
norn-task/benches/: schedule.rs
norn-task/src/: future_cell.rs  lib.rs  schedule.rs  state.rs  task_cell.rs  taskqueue.rs  tasks.rs  util.rs
norn-task/src/tests/: basic.rs  mod.rs
norn-timer/: Cargo.toml
norn-timer/src/: clock.rs  context.rs  entry.rs  error.rs  level.rs  lib.rs  wheels.rs
norn-timer/src/tests/: mod.rs  prop.rs  smoke.rs
norn-uring/: Cargo.toml
norn-uring/benches/: noop.rs
norn-uring/src/: buf.rs  error.rs  fd.rs  lib.rs
norn-uring/src/driver/: context.rs  futures.rs  mod.rs  unpark.rs
norn-uring/src/fs/: dir.rs  file.rs  mod.rs  opts.rs
norn-uring/src/io/: mod.rs
norn-uring/src/net/: mod.rs  socket.rs  tcp.rs  udp.rs
norn-uring/src/operation/: mod.rs  raw.rs
norn-uring/src/util/: mod.rs  notify.rs
norn-uring/tests/: file.rs  noop_submit.rs  tcp.rs  udp.rs  util.rs
norn-util/: Cargo.toml
norn-util/src/: lib.rs  pollset.rs
