[package]
name = "norn-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cordyceps = "0.3.2"
pin-project-lite = "0.2.13"
norn-executor = { path = "../norn-executor" }
thiserror = "1.0.50"
proptest = "1.4.0"

[dev-dependencies]
futures-test = "0.3.29"
